--- a/ch12/case1201.ipynb
+++ b/ch12/case1201.ipynb
@@ -132,20 +132,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display 12.5: Partial residual plot of state average SAT scores (adjusted for takers and median class rank) versus state expenditure"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(ncols=2, sharex=True, sharey=True)\n",
-    "sm.graphics.plot_partregress('SAT', 'Expend', ['logTakers', 'Rank'], data=df, obs_labels=False, ax=ax[0])\n",
-    "sm.graphics.plot_partregress('SAT', 'Expend', ['logTakers', 'Rank'], data=df.query('Expend < 40'), obs_labels=False, ax=ax[1])"
+    "fig, ax = plt.subplots(ncols=2, sharex=True, sharey=True)                      \n",
+    "model = smf.ols(formula='SAT ~ logTakers + Rank + Expend', data=df).fit()          \n",
+    "sm.graphics.plot_ccpr(model, 'Expend', ax=ax[0]) \n",
+    "ax[0].set_title('With Alaska')\n",
+    "ax[0].set_ylabel('Partial Residual')\n",
+    "ax[0].set_xlabel('')\n",
+    "                                                                                \n",
+    "model = smf.ols(formula='SAT ~ logTakers + Rank + Expend', data=df.query('Expend < 40')).fit()\n",
+    "sm.graphics.plot_ccpr(model, 'Expend', ax=ax[1])     \n",
+    "ax[1].set_title('Without Alaska')\n",
+    "ax[1].set_ylabel('')\n",
+    "ax[1].set_xlabel('')\n",
+    "\n",
+    "fig.suptitle('CCPR (partial residual plots)')\n",
+    "fig.supxlabel('Expenditure ($100s per student)')\n",
+    "fig.tight_layout()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Partial residual plot of state average SAT scores (adjusted for takers and median class rank) versus public school"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(ncols=2, sharex=True, sharey=True)                      \n",
+    "model = smf.ols(formula='SAT ~ logTakers + Rank + Public', data=df).fit()          \n",
+    "sm.graphics.plot_ccpr(model, 'Public', ax=ax[0]) \n",
+    "ax[0].set_title('With Louisiana')\n",
+    "ax[0].set_ylabel('Partial Residual')\n",
+    "ax[0].set_xlabel('')\n",
+    "                                                                                \n",
+    "model = smf.ols(formula='SAT ~ logTakers + Rank + Public', data=df.query('Public > 50')).fit()\n",
+    "sm.graphics.plot_ccpr(model, 'Public', ax=ax[1])     \n",
+    "ax[1].set_title('Without Louisiana')\n",
+    "ax[1].set_ylabel('')\n",
+    "ax[1].set_xlabel('')\n",
+    "\n",
+    "fig.suptitle('CCPR (partial residual plots)')\n",
+    "fig.supxlabel('Test Taker Percentage in Public Schools')\n",
+    "fig.tight_layout()"
+   ]
   },
   {
    "cell_type": "code",
