--- a/ch12/case1201.ipynb
+++ b/ch12/case1201.ipynb
@@ -31,6 +31,7 @@
     "import seaborn as sns\n",
     "import statsmodels.api as sm\n",
     "import statsmodels.formula.api as smf\n",
+    "from statsmodels.stats.anova import anova_lm\n",
     "\n",
     "sns.set()\n",
     "pd.options.display.float_format = \"{:.3f}\".format\n",
@@ -147,13 +148,13 @@
     "fig, ax = plt.subplots(ncols=2, sharex=True, sharey=True)                      \n",
     "model = smf.ols(formula='SAT ~ logTakers + Rank + Expend', data=df).fit()          \n",
     "sm.graphics.plot_ccpr(model, 'Expend', ax=ax[0]) \n",
-    "ax[0].set_title('With Alaska')\n",
+    "ax[0].set_title(rf\"With Alaska: $\\beta$, SE = {model.params['Expend']:.2f}, {model.bse['Expend']:.2f}\")\n",
     "ax[0].set_ylabel('Partial Residual')\n",
     "ax[0].set_xlabel('')\n",
     "                                                                                \n",
     "model = smf.ols(formula='SAT ~ logTakers + Rank + Expend', data=df.query('Expend < 40')).fit()\n",
     "sm.graphics.plot_ccpr(model, 'Expend', ax=ax[1])     \n",
-    "ax[1].set_title('Without Alaska')\n",
+    "ax[1].set_title(rf\"Without Alaska: $\\beta$, SE = {model.params['Expend']:.2f}, {model.bse['Expend']:.2f}\")\n",
     "ax[1].set_ylabel('')\n",
     "ax[1].set_xlabel('')\n",
     "\n",
@@ -183,19 +184,146 @@
     "fig, ax = plt.subplots(ncols=2, sharex=True, sharey=True)                      \n",
     "model = smf.ols(formula='SAT ~ logTakers + Rank + Public', data=df).fit()          \n",
     "sm.graphics.plot_ccpr(model, 'Public', ax=ax[0]) \n",
-    "ax[0].set_title('With Louisiana')\n",
+    "ax[0].set_title(rf\"W/Louisiana: $\\beta$, SE = {model.params['Public']:.2f}, {model.bse['Public']:.2f}\")\n",
     "ax[0].set_ylabel('Partial Residual')\n",
     "ax[0].set_xlabel('')\n",
     "                                                                                \n",
     "model = smf.ols(formula='SAT ~ logTakers + Rank + Public', data=df.query('Public > 50')).fit()\n",
     "sm.graphics.plot_ccpr(model, 'Public', ax=ax[1])     \n",
-    "ax[1].set_title('Without Louisiana')\n",
+    "ax[1].set_title(rf\"Wo/Louisiana:  $\\beta$, SE = {model.params['Public']:.2f}, {model.bse['Public']:.2f}\")\n",
     "ax[1].set_ylabel('')\n",
     "ax[1].set_xlabel('')\n",
     "\n",
     "fig.suptitle('CCPR (partial residual plots)')\n",
     "fig.supxlabel('Test Taker Percentage in Public Schools')\n",
     "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One has to take into account the standard errors of the *Expend* slope to see that the effect of Alaska is significant, while in the *Public* case, the effect of Louisiana is not.  Are partial residual plots really necessary for that?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Forward Variable Selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There does not seem to be any forward selection capability in statsmodels, but it's easy to program it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3rd party library imports                                                     \n",
+    "import pandas as pd                                                             \n",
+    "import statsmodels.formula.api as smf                                           \n",
+    "from statsmodels.stats.anova import anova_lm                                    \n",
+    "                                                                                \n",
+    "                                                                                \n",
+    "class ForwardSelect(object):                                                    \n",
+    "                                                                                \n",
+    "    def __init__(self, df, endog):                                              \n",
+    "                                                                                \n",
+    "        self.endog = endog                                                      \n",
+    "        self.df = df                                                            \n",
+    "                                                                                \n",
+    "        self.current_exog = []                                                  \n",
+    "                                                                                \n",
+    "        self.candidates = df.columns.to_list()                                  \n",
+    "        self.candidates.remove(endog)                                           \n",
+    "                                                                                \n",
+    "    def run_forward(self):                                                      \n",
+    "        \"\"\"                                                                     \n",
+    "        Go thru each new model where the candidate variables are added to the   \n",
+    "        new model exog vars.                                                    \n",
+    "        \"\"\"                                                                     \n",
+    "                                                                                \n",
+    "        fresults = []                                                           \n",
+    "                                                                                \n",
+    "        for var in self.candidates:                                             \n",
+    "            formula = f\"{self.endog} ~ {' + '.join(self.current_exog + [var])}\" \n",
+    "            model = smf.ols(formula=formula, data=self.df).fit()                \n",
+    "            atable = anova_lm(model)                                            \n",
+    "            fresults.append(atable.loc[var, 'F'])                               \n",
+    "                                                                                \n",
+    "        s = pd.Series(fresults, index=self.candidates)                          \n",
+    "        print(s)                                                                \n",
+    "                                                                                \n",
+    "    def select(self, var):                                                      \n",
+    "        \"\"\"                                                                     \n",
+    "        Add a variable to the set list of exog vars, probably because of high   \n",
+    "        f-value.                                                                \n",
+    "        \"\"\"                                                                     \n",
+    "                                                                                \n",
+    "        self.candidates.remove(var)                                             \n",
+    "        self.current_exog.append(var)\n",
+    "                                                                            \n",
+    "    def __str__(self):                                                          \n",
+    "        if len(self.current_exog) == 0:                                         \n",
+    "            formula = f\"{self.endog} ~ 1\"                                       \n",
+    "        else:                                                                   \n",
+    "            formula = f\"{self.endog} ~ {' + '.join(self.current_exog)}\"         \n",
+    "        model = smf.ols(formula=formula, data=self.df).fit()                    \n",
+    "        return str(model.summary())  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = df.query('Expend < 40').drop(['State', 'Takers'], axis='columns')\n",
+    "fs = ForwardSelect(data, 'SAT')\n",
+    "fs.run_forward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs.select('logTakers')\n",
+    "fs.run_forward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs.select('Expend')\n",
+    "fs.run_forward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(fs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stop after selecting just two variables, *logTakers* and *Expend*.  Note that *Rank* is not chosen, and the pairplots bear this out since it is highly correlated with *logTakers*."
    ]
   },
   {
