--- a/ch12/case1201.ipynb
+++ b/ch12/case1201.ipynb
@@ -249,16 +249,22 @@
     "        Go thru each new model where the candidate variables are added to the   \n",
     "        new model exog vars.                                                    \n",
     "        \"\"\"                                                                     \n",
-    "                                                                                \n",
-    "        fresults = []                                                           \n",
+    "\n",
+    "        aic = []\n",
+    "        bic = []\n",
+    "        f = []                                                           \n",
     "                                                                                \n",
     "        for var in self.candidates:                                             \n",
     "            formula = f\"{self.endog} ~ {' + '.join(self.current_exog + [var])}\" \n",
     "            model = smf.ols(formula=formula, data=self.df).fit()                \n",
-    "            atable = anova_lm(model)                                            \n",
-    "            fresults.append(atable.loc[var, 'F'])                               \n",
-    "                                                                                \n",
-    "        s = pd.Series(fresults, index=self.candidates)                          \n",
+    "            atable = anova_lm(model)   \n",
+    "\n",
+    "            aic.append(model.aic)\n",
+    "            bic.append(model.bic)\n",
+    "            f.append(atable.loc[var, 'F'])                               \n",
+    "\n",
+    "        data = {'AIC': aic, 'BIC': bic, 'F-value': f}\n",
+    "        s = pd.DataFrame(data, index=self.candidates)                          \n",
     "        print(s)                                                                \n",
     "                                                                                \n",
     "    def select(self, var):                                                      \n",
