--- a/ch16/case1601.ipynb
+++ b/ch16/case1601.ipynb
@@ -20,7 +20,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "433a3791-3d51-41ca-9398-5aea66cce028",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# 3rd party library imports\n",
@@ -57,13 +59,15 @@
     "# munge the data into long form\n",
     "_df = (\n",
     "    df.groupby('Treatment')\n",
-    "      .mean(numeric_only=True)\n",
-    "      .T\n",
-    "      .stack()\n",
-    "      .reset_index()\n",
-    "      .rename({'level_0': 'Week', 0: 'Percentage'}, axis='columns')\n",
+    "      .mean(numeric_only=True) # construct means for each week for each treatment\n",
+    "      .T                       # 'Week' becomes the vertical index\n",
+    "      .stack()                 # treatment and control values into long form\n",
+    "      .reset_index()           # move Week and treatment back out out the index\n",
+    "      .rename({'level_0': 'Week', 0: 'Percentage'}, axis='columns')  # \n",
     ")\n",
-    "_df.head()"
+    "# \"Fix\" the week column into numeric, make it flow from least to most recent\n",
+    "_df['Week'] = _df['Week'].apply(lambda x: -1 * int(x.replace('Week', '')))\n",
+    "print(_df)"
    ]
   },
   {
@@ -73,8 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = sns.lineplot(data=_df, x='Week', y='Percentage', hue='Treatment', style='Treatment', markers=True, dashes=False)\n",
-    "ax.invert_xaxis()"
+    "ax = sns.lineplot(data=_df, x='Week', y='Percentage', hue='Treatment', style='Treatment', markers=True, dashes=False)"
    ]
   },
   {
@@ -243,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
