Update case0401 notebook

--- a/ch04/case0401.ipynb
+++ b/ch04/case0401.ipynb
@@ -15,13 +15,14 @@
    "source": [
     "# standard library imports\n",
     "import pathlib\n",
+    "from itertools import combinations\n",
     "\n",
     "# 3rd party library imports\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pingouin as pg\n",
-    "import scipy.stats\n",
+    "import scipy.special\n",
     "import seaborn as sns\n",
     "\n",
     "sns.set()"
@@ -64,8 +65,8 @@
     "sns.histplot(data=df.query('Launch == \"Warm\"'), x='Incidents', discrete=True, ax=axes[1])\n",
     "axes[0].set_ylim(axes[1].get_ylim())\n",
     "axes[1].set_ylabel(None)\n",
-    "axes[0].set_xlabel(None)\n",
-    "axes[1].set_xlabel(None)\n",
+    "axes[0].set_xlabel('cool')\n",
+    "axes[1].set_xlabel('warm')\n",
     "axes[1].set_yticklabels([])\n",
     "fig.supxlabel('Incidents')\n",
     "fig.tight_layout()"
@@ -84,22 +85,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Mann-Whitney U-test is inappropriate as there are only 4 launches in cool weather.  A permutation calculation is done instead.  How probable is an outcome as extreme as the one observed?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = df.loc[df.Launch == 'Cool', 'Incidents']\n",
-    "y = df.loc[df.Launch == 'Warm', 'Incidents']\n",
-    "stat = pg.mwu(x, y)\n",
-    "print(stat)"
+    "total_combinations = scipy.special.comb(24, 4)\n",
+    "\n",
+    "# enumerate the combinations that are as bas as or worse than the observed.\n",
+    "# The cool incidents are (1, 1, 1, 3).  The sum of the bad incidents is 6\n",
+    "num_bad_incidents = len([x for x in combinations(df['Incidents'], 4) if sum(x) >= 6])\n",
+    "p = num_bad_incidents / total_combinations\n",
+    "print(p)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is strong evidence that the number of O-ring incidents is associated with temperature ($U$ = 74, $p$-value = 0.0011)."
+    "There is strong evidence that the number of O-ring incidents is associated with temperature ($p$-value = 0.0099)."
    ]
   }
  ],
