update notebooks for ch02 - ch06

--- a/ch02/case0201.ipynb
+++ b/ch02/case0201.ipynb
@@ -14,25 +14,28 @@
    "outputs": [],
    "source": [
     "# standard library imports\n",
-    "import pathlib\n",
-    "import functools\n",
+    "import warnings\n",
     "\n",
     "# 3rd party library imports\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pingouin as pg\n",
     "import scipy.stats\n",
     "import seaborn as sns\n",
     "\n",
+    "warnings.simplefilter('ignore', category=FutureWarning)\n",
     "sns.set()\n",
-    "pd.options.display.float_format = \"{:.4f}\".format"
+    "pd.options.display.float_format = \"{:.4f}\".format\n",
+    "\n",
+    "df = pd.read_csv('case0201.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We begin by reading the data and summarizing the variables."
+    "# Robustness of Assumptions"
    ]
   },
   {
@@ -41,7 +44,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('case0201.csv')\n",
     "df.groupby('Year').describe()"
    ]
   },
@@ -58,14 +60,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = sns.boxplot(x='Year', y='Depth', data=df)"
+    "fig, axes = plt.subplots(ncols=2, figsize=[12, 6.4])\n",
+    "_ = sns.boxplot(data=df, x='Year', y='Depth', ax=axes[0])\n",
+    "_ = sns.kdeplot(data=df, x='Depth', hue='Year', ax=axes[1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The distributions are approximately normal, with some evidence of a long tail."
+    "There is weak evidence against the assumptions of normality and equal variance.  There is slight left skew."
    ]
   },
   {
