--- a/ch02/case0202.ipynb
+++ b/ch02/case0202.ipynb
@@ -14,8 +14,7 @@
    "outputs": [],
    "source": [
     "# standard library imports\n",
-    "import pathlib\n",
-    "import functools\n",
+    "import warnings\n",
     "\n",
     "# 3rd party library imports\n",
     "import matplotlib.pyplot as plt\n",
@@ -25,20 +24,24 @@
     "import scipy.stats\n",
     "import seaborn as sns\n",
     "\n",
+    "warnings.simplefilter('ignore', category=FutureWarning)\n",
+    "\n",
     "# two digits of precision is good enough here\n",
     "pd.options.display.float_format = \"{:.3f}\".format\n",
     "\n",
     "# enable TeX on figure labels\n",
     "plt.rcParams['text.usetex'] = True\n",
     "\n",
-    "sns.set()"
+    "sns.set()\n",
+    "\n",
+    "df = pd.read_csv('case0202.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We begin by reading the data and summarizing the variables."
+    "# Robustness of Assumptions"
    ]
   },
   {
@@ -47,7 +50,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('case0202.csv')\n",
     "df.describe()"
    ]
   },
@@ -72,20 +74,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = sns.boxplot(data=dflong, x='Treatment', y='Volume')\n",
-    "_ = ax.set_ylabel(r'Volume ($cm^3$)')\n",
-    "_ = ax.set_title('Hippocampus Volumes for Schizophrenia Study')"
+    "fig, axes = plt.subplots(ncols=2, figsize=[12, 6.4])\n",
+    "_ = sns.boxplot(data=dflong, x='Treatment', y='Volume', ax=axes[0])\n",
+    "_ = axes[0].set_ylabel(r'Volume ($cm^3$)')\n",
+    "_ = axes[0].set_title('Hippocampus Volumes for Schizophrenia Study')\n",
+    "_ = sns.kdeplot(data=dflong, x='Volume', hue='Treatment', ax=axes[1])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "g = sns.displot(data=dflong, x='Volume', hue='Treatment', kind='kde', rug=True)\n",
-    "_ = g.fig.suptitle('Distributions of Hippocampus Study Volumes')\n",
-    "g.fig.tight_layout()"
+    "There is weak evidence against both normality and equal variance."
    ]
   },
   {
@@ -113,13 +113,6 @@
    "source": [
     "There is strong evidence that the mean difference in left hippocampus volumes bettween schizophrenic individuals and their nonschizophrenic twins is non-zero (two-sided $p$-value = 0.006, $t_{0.95, 14}$ = -3.229).   The mean difference is between 0.07 and 0.33 $cm^3$ smaller for schizophrenic individuals."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
