--- a/ch04/case0401.ipynb
+++ b/ch04/case0401.ipynb
@@ -8,13 +8,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Is there a higher risk of O-ring failures at lower launch temperatures?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# standard library imports\n",
-    "import pathlib\n",
     "from itertools import combinations\n",
     "\n",
     "# 3rd party library imports\n",
@@ -29,13 +35,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We begin by reading the data and summarizing the variables."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -43,6 +42,13 @@
    "source": [
     "df = pd.read_csv('case0401.csv')\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Robustness of Assumptions"
    ]
   },
   {
@@ -76,19 +82,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\n",
-    "\\begin{align}\n",
-    "H_0:  \\mu_{cool} &= \\mu_{warm} \\\\\n",
-    "H_a:  \\mu_{cool} &\\ne \\mu_{warm} \\\\\n",
-    "\\end{align}\n",
-    "$"
+    "There is extremely strong evidence against the assumption of normality, so a two-sample $t$ test is not appropriate.\n",
+    "\n",
+    "The large number of ties in the warm sample points to the inadequacy of the Mann Whitney U test.\n",
+    "\n",
+    "A permutation test will be performed.  How probable is an outcome as extreme as the one observed?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Mann-Whitney U-test is inappropriate as there are only 4 launches in cool weather.  A permutation calculation is done instead.  How probable is an outcome as extreme as the one observed?"
+    "$\n",
+    "\\begin{align}\n",
+    "H_0:  {Distribution}_{cool} &= {Distribution}_{warm} \\\\\n",
+    "H_a:  {Distribution}_{cool} &\\ne {Distribution}_{warm} \\\\\n",
+    "\\end{align}\n",
+    "$"
    ]
   },
   {
@@ -110,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is strong evidence that the number of O-ring incidents is associated with temperature ($p$-value = 0.0099)."
+    "There is strong evidence that the number of O-ring incidents is associated with temperature.  The likelihood of obtaining a result as extreme as observed is small. ($p$-value = 0.0099)."
    ]
   }
  ],
