--- a/ch04/case0402.ipynb
+++ b/ch04/case0402.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two methods of teaching are compared.  Is there reason to suggest that the modified method is superior?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -27,10 +34,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('case0402.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We begin by reading the data and summarizing the variables."
+    "# Robustness of Assumptions"
    ]
   },
   {
@@ -39,8 +55,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('case0402.csv')\n",
-    "df.groupby('Treatment').describe()                                    "
+    "df.groupby('Treatment')['Time'].describe()                                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby('Treatment')['Censored'].sum()"
    ]
   },
   {
@@ -50,6 +74,13 @@
    "outputs": [],
    "source": [
     "_ = sns.displot(data=df, x='Time', hue='Treatment', kind='kde', rug=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is strong evidence against the assumption of normality and also a large number of censored observations in the conventional group.  The Mann-Whitney U test should be used instead of a $t$-test."
    ]
   },
   {
