--- a/ch05/case0501.ipynb
+++ b/ch05/case0501.ipynb
@@ -8,53 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pathlib\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import pingouin as pg\n",
-    "import scipy.stats\n",
-    "import seaborn as sns\n",
-    "import statsmodels.api as sm\n",
-    "import statsmodels.formula.api as smf\n",
-    "import warnings\n",
-    "\n",
-    "sns.set()\n",
-    "warnings.simplefilter('ignore', category=FutureWarning)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We begin by reading the data and summarizing the variables."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('case0501.csv')\n",
-    "df.groupby('Diet').describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_ = sns.boxplot(x='Diet', y='Lifetime', data=df)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -73,7 +26,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = sns.displot(data=df, x='Lifetime', hue='Diet', rug=True, kind='kde')"
+    "# standard library imports\n",
+    "import warnings\n",
+    "\n",
+    "# 3rd party library imports\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pingouin as pg\n",
+    "import scipy.stats\n",
+    "import seaborn as sns\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf\n",
+    "\n",
+    "sns.set()\n",
+    "warnings.simplefilter('ignore', category=FutureWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('case0501.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Robustness to Assumptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby('Diet').describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(ncols=2, figsize=[12, 6.4])\n",
+    "_ = sns.boxplot(data=df, x='Diet', y='Lifetime', ax=axes[0])\n",
+    "_ = sns.kdeplot(data=df, x='Lifetime', hue='Diet', ax=axes[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is only weak evidence agains the assumption of equal variance.  The samples are somewhat skewed left, but it does not appear to be serious."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm.qqplot(data=df['Lifetime'], line='45', fit=True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is some departure from normality in the QQ plot, but it does not seem too serious."
    ]
   },
   {
@@ -83,7 +110,17 @@
    "outputs": [],
    "source": [
     "model = smf.ols('Lifetime ~ Diet', data=df).fit()\n",
-    "model.summary()"
+    "fig, ax = plt.subplots()\n",
+    "_ = sns.scatterplot(x=model.predict(), y=model.resid, ax=ax)\n",
+    "ax.set_ylabel('Residuals')\n",
+    "_ = ax.set_xlabel('Predicted')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The residuals-vs-predicted plot does not indicate that a data transformation is necessary."
    ]
   },
   {
@@ -91,6 +128,16 @@
    "metadata": {},
    "source": [
     "## Does lifetime on the 50 kcal/wk (N/R50) diet exceed the lifetime on the 85 kcal/wk (N/N85) diet "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = smf.ols('Lifetime ~ C(Diet, Treatment(reference=\"N/N85\"))', data=df).fit()\n",
+    "model.summary()"
    ]
   },
   {
@@ -175,6 +222,13 @@
    "source": [
     "There is strong evidence that restricting the dietary intake to 85 kcal/wk (N/N85) changes the expected lifetime over that of mice with no dietary restrictions (NP) ($t_{0.95, 343}$ = 4.065, $p$-value < 0.0001.   We are 95% confident that the true increase in life expectancy is between 2.7 and 7.8 weeks."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
