Update notebook for non-parametric

--- a/ch05/case0502.ipynb
+++ b/ch05/case0502.ipynb
@@ -71,14 +71,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sm.qqplot(data=df['Percent'], line='45', fit=True)"
+    "sm.qqplot(data=df['Percent'], line='45', fit=True)\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is weak evidence against independence.  There appears to be significant evidence against equal variance.  Outliers do not seem to be an issue, and only the percentages for Judge E might be construed to be skewed somewhat.  There is weak evidence against normality."
+    "There is weak evidence against independence.  There appears to be significant evidence against equal variance, so this is a problem.  Outliers do not seem to be an issue, and only the percentages for Judge E might be construed to be skewed somewhat.  There is weak evidence against normality.\n",
+    "\n",
+    "Despite the equal variance violation, the book plows forward."
    ]
   },
   {
@@ -254,13 +257,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is no technical need to do a non-parametric analysis since none of the guidelines are violated.  But if it were appropriate, we might do the following."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Is any judge different?"
    ]
   },
@@ -293,11 +289,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Are any of judges A-F different?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "\\begin{align}\n",
+    "H_0: \\: &\\mu_i = \\mu_j \\: \\text{for} \\: i, j \\in \\{A, B, C, D, E, F\\} \\: \\text{(reduced model)} \\\\\n",
+    "H_a: \\: &\\text{at least one} \\: \\mu_i \\ne \\mu_j \\: \\text{for} \\: i, j \\in \\{A, B, C, D, E, F\\} \\: \\text{(full model)} \\\\\n",
+    "\\end{align}\n",
+    "$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spock = \"Spock's\"\n",
+    "pg.kruskal(data=df.query('Judge != @spock'), dv='Percent', between='Judge')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is weak evidence that any of judges A-F are different ($H_5$ = 5.548, $p$-value = 0.3527)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Is Spock's Judge different from Judges A-F?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pg.kruskal(data=df, dv='Percent', between='Judge2')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is strong evidence that Spock's judge is different from Judge's A-F ($H_1$ = 18.1881, $p$-value < 0.0001)."
+   ]
   }
  ],
  "metadata": {
