--- a/ch05/case0501.ipynb
+++ b/ch05/case0501.ipynb
@@ -13,8 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pathlib\n",
+    "# standard library imports\n",
     "\n",
+    "# 3rd party library imports\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pingouin as pg\n",
@@ -46,15 +48,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_ = sns.boxplot(x='Diet', y='Lifetime', data=df)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,12 +61,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Robustness to Assumptions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = sns.displot(data=df, x='Lifetime', hue='Diet', rug=True, kind='kde')"
+    "fig, axes = plt.subplots(ncols=2, figsize=[12, 6.4])\n",
+    "_ = sns.boxplot(data=df, x='Diet', y='Lifetime', ax=axes[0])\n",
+    "_ = sns.kdeplot(data=df, x='Lifetime', hue='Diet', ax=axes[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data is somewhat skewed left, but it does not appear to be serious."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm.qqplot(data=df['Lifetime'], line='45', fit=True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is some departure from normality in the QQ plot, but it does not seem too serious."
    ]
   },
   {
@@ -83,6 +109,32 @@
    "outputs": [],
    "source": [
     "model = smf.ols('Lifetime ~ Diet', data=df).fit()\n",
+    "fig, ax = plt.subplots()\n",
+    "_ = sns.scatterplot(x=model.predict(), y=model.resid, ax=ax)\n",
+    "ax.set_ylabel('Residuals')\n",
+    "_ = ax.set_xlabel('Predicted')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The residuals-vs-predicted plot does not indicate that a data transformation is necessary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Case Study Questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model.summary()"
    ]
   },
