Update ch06 notebooks

--- a/ch06/case0601.ipynb
+++ b/ch06/case0601.ipynb
@@ -7,13 +7,15 @@
    "outputs": [],
    "source": [
     "# standard library imports\n",
-    "import pathlib\n",
     "\n",
     "# 3rd party library imports\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy.stats\n",
     "import seaborn as sns\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf\n",
     "\n",
     "sns.set()"
    ]
@@ -45,12 +47,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "_ = sns.boxplot(x='Handicap', y='Score', data=df)"
+    "## Robustness to Assumptions"
    ]
   },
   {
@@ -59,7 +59,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = sns.displot(data=df, x='Score', hue='Handicap', kind='kde')"
+    "fig, axes = plt.subplots(ncols=2, figsize=[12, 6.4])\n",
+    "_ = sns.boxplot(data=df, x='Handicap', y='Score', ax=axes[0])\n",
+    "_ = sns.kdeplot(data=df, x='Score', hue='Handicap', ax=axes[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm.graphics.qqplot(df['Score'], fit=True, line='45')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There do not appear to be any violations of normality, equal variance, or independence."
    ]
   },
   {
